tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_traits_does_not_crash_on_as_trait_path_with_empty_path/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: struct `Foo` is never constructed
  ┌─ src/main.nr:2:16
  │
2 │         struct Foo {
  │                --- struct is never constructed
  │

error:  is not a trait, therefore it can't be implemented
  ┌─ src/main.nr:3:18
  │
3 │             x: <N>,
  │                  -
  │

error: Expected a 'as' but found '>'
  ┌─ src/main.nr:3:18
  │
3 │             x: <N>,
  │                  -
  │

error: Expected a path but found '>'
  ┌─ src/main.nr:3:18
  │
3 │             x: <N>,
  │                  -
  │

error: Expected a '::' but found ','
  ┌─ src/main.nr:3:19
  │
3 │             x: <N>,
  │                   -
  │

error: Expected an identifier but found ','
  ┌─ src/main.nr:3:19
  │
3 │             x: <N>,
  │                   -
  │

Aborting due to 5 previous errors
